# snailbot

./: LICENSE  README.md
snailbot/: CMakeLists.txt  package.xml
snailbot/notes/: notes.md  parts.md
snailbot_description/: CMakeLists.txt  package.xml
snailbot_description/config/: snailbot.yaml  snailbot_mcu.yaml
snailbot_description/launch/: 3dsensor.launch  amcl_demo.launch  bringup.launch  description.launch  gmapping_demo.launch
snailbot_description/launch/includes/: gmapping.launch.xml  move_base.launch.xml
snailbot_description/param/: base_local_planner_params.yaml  costmap_common_params.yaml
snailbot_description/rviz/: navigation.rviz
snailbot_description/urdf/: snailbot.urdf
snailbot_driver/: CMakeLists.txt  package.xml
snailbot_driver/cfg/: MotorGains.cfg
snailbot_driver/firmware/libraries/ros_lib/ackermann_msgs/: AckermannDrive.h  AckermannDriveStamped.h
snailbot_driver/firmware/libraries/ros_lib/ar_track_alvar/: AlvarMarker.h  AlvarMarkers.h
snailbot_driver/firmware/libraries/ros_lib/arbotix_msgs/: Analog.h  Digital.h  Enable.h  Relax.h  SetSpeed.h  SetupChannel.h
snailbot_driver/firmware/libraries/ros_lib/ardrone_autonomy/: navdata_adc_data_frame.h  navdata_altitude.h  navdata_demo.h  navdata_euler_angles.h  navdata_games.h  navdata_gyros_offsets.h  navdata_hdvideo_stream.h  navdata_kalman_pressure.h  navdata_magneto.h  navdata_phys_measures.h  navdata_pressure_raw.h  navdata_pwm.h  navdata_raw_measures.h  navdata_rc_references.h  navdata_references.h  navdata_time.h  navdata_trackers_send.h  navdata_trims.h  navdata_video_stream.h  navdata_vision.h  navdata_vision_detect.h  navdata_vision_of.h  navdata_vision_perf.h  navdata_vision_raw.h  navdata_watchdog.h  navdata_wifi.h  navdata_wind_speed.h  navdata_zimmu_3000.h
snailbot_driver/firmware/libraries/ros_lib/arduino_imu/: arduinoImu.h
snailbot_driver/firmware/libraries/ros_lib/ax2550/: Encoders.h  StampedEncoders.h
snailbot_driver/firmware/libraries/ros_lib/brics_actuator/: CartesianPose.h  CartesianTwist.h  CartesianVector.h  CartesianWrench.h  JointAccelerations.h  JointConstraint.h  JointImpedances.h  JointPositions.h  JointTorques.h  JointValue.h  JointVelocities.h  Poison.h
snailbot_driver/firmware/libraries/ros_lib/bride_tutorials/: Dummy.h  TriggerPublishAction.h  TriggerPublishActionFeedback.h  TriggerPublishActionGoal.h  TriggerPublishActionResult.h  TriggerPublishFeedback.h  TriggerPublishGoal.h  TriggerPublishResult.h
snailbot_driver/firmware/libraries/ros_lib/bwi_planning_common/: PlannerAtom.h  PlannerInterface.h
snailbot_driver/firmware/libraries/ros_lib/clearpath_base/: AckermannSetpt.h  DifferentialControl.h  DifferentialOutput.h  DifferentialSpeed.h  Distance.h  DistanceTiming.h  Encoder.h  SystemStatus.h  TurnSetpt.h  VelocitySetpt.h
snailbot_driver/firmware/libraries/ros_lib/dynamic_tf_publisher/: AssocTF.h  DeleteTF.h  DissocTF.h  SetDynamicTF.h
snailbot_driver/firmware/libraries/ros_lib/enu/: FromFix.h  ToENU.h  ToFix.h
snailbot_driver/firmware/libraries/ros_lib/hector_nav_msgs/: GetDistanceToObstacle.h
snailbot_driver/firmware/libraries/ros_lib/hector_uav_msgs/: Altimeter.h  AttitudeCommand.h  Compass.h  ControllerState.h  HeadingCommand.h  HeightCommand.h  MotorCommand.h  MotorPWM.h  MotorStatus.h  PositionXYCommand.h  RC.h  RawImu.h  RawMagnetic.h  RawRC.h  RuddersCommand.h  ServoCommand.h  Supply.h  ThrustCommand.h  VelocityXYCommand.h  VelocityZCommand.h  YawrateCommand.h
snailbot_driver/firmware/libraries/ros_lib/hector_worldmodel_msgs/: AddObject.h  GetObjectModel.h  ImagePercept.h  Object.h  ObjectInfo.h  ObjectModel.h  ObjectState.h  PerceptInfo.h  PosePercept.h  SetObjectName.h  SetObjectState.h  VerifyObject.h  VerifyPercept.h
snailbot_driver/firmware/libraries/ros_lib/image_view2/: ImageMarker2.h  PointArrayStamped.h
snailbot_driver/firmware/libraries/ros_lib/jsk_footstep_msgs/: ExecFootstepsAction.h  ExecFootstepsActionFeedback.h  ExecFootstepsActionGoal.h  ExecFootstepsActionResult.h  ExecFootstepsFeedback.h  ExecFootstepsGoal.h  ExecFootstepsResult.h  Footstep.h  FootstepArray.h  PlanFootstepsAction.h  PlanFootstepsActionFeedback.h  PlanFootstepsActionGoal.h  PlanFootstepsActionResult.h  PlanFootstepsFeedback.h  PlanFootstepsGoal.h  PlanFootstepsResult.h
snailbot_driver/firmware/libraries/ros_lib/jsk_gui_msgs/: Action.h  AndroidSensor.h  DeviceSensor.h  DeviceSensorALL.h  Gravity.h  Imu.h  MagneticField.h  MultiTouch.h  Query.h  Tablet.h  Touch.h  TouchEvent.h  VoiceMessage.h
snailbot_driver/firmware/libraries/ros_lib/jsk_hark_msgs/: HarkPower.h
snailbot_driver/firmware/libraries/ros_lib/jsk_topic_tools/: List.h  TopicInfo.h  Update.h
snailbot_driver/firmware/libraries/ros_lib/kingfisher_msgs/: Course.h  Drive.h  Helm.h  Sense.h
snailbot_driver/firmware/libraries/ros_lib/posedetection_msgs/: Curve1D.h  Detect.h  Feature0D.h  Feature0DDetect.h  Feature1D.h  Feature1DDetect.h  ImageFeature0D.h  ImageFeature1D.h  Object6DPose.h  ObjectDetection.h
snailbot_driver/firmware/libraries/ros_lib/qt_tutorials/: TwoInts.h
snailbot_driver/firmware/libraries/ros_lib/r2_msgs/: Gains.h  JointControl.h  JointStatus.h  JointStatusArray.h  PDMCStatus.h  ParseTableScene.h  PoseCommand.h  PoseCommandArray.h  PoseCommandParams.h  PoseCommandStatus.h  PoseTwistStamped.h  Power.h  ResetTableScene.h  Servo.h  SetJointMode.h  SetTipName.h  TakeSnapshot.h  TorsoStatus.h
snailbot_driver/firmware/libraries/ros_lib/rocon_interaction_msgs/: ErrorCodes.h  GetInteraction.h  GetInteractions.h  Interaction.h  (+7 more)
snailbot_driver/firmware/two_wheel_base/: boot_buzzer.h  two_wheel_base.ino
snailbot_driver/include/snailbot_driver/: snailbot_driver.h
snailbot_driver/launch/: snailbot_bringup.launch
snailbot_driver/src/: snailbot_driver.cpp  snailbot_driver_node.cpp
snailbot_msgs/: CMakeLists.txt  package.xml
snailbot_msgs/msg/: Motors.msg
snailbot_teleop/: CMakeLists.txt  package.xml
snailbot_teleop/launch/: snailbot_teleop.launch  teleop.launch
snailbot_teleop/rviz/: snailbot.rviz  teleop.rviz
snailbot_teleop/src/: joystick_teleop.cpp
(+56 files in other folders)
