<?xml version="1.0"?>
<package>
  <name>snailbot</name>
  <version>0.0.0</version>
  <description>The snailbot metapackage</description>
  <maintainer email="tony.baltovski@gmail.com">Tony Baltovski</maintainer>
  <license>BSD</license>
  <author email="tony.baltovski@gmail.com">Tony Baltovski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
		<metapackage/>
  </export>
</package>
