<?xml version="1.0"?>
<package>
  <name>snailbot_driver</name>
  <version>0.0.0</version>
  <description>The snailbot driver</description>
  <maintainer email="tony.baltovski@gmail.com">Tony Baltovski</maintainer>
  <license>BSD</license>
  <author email="tony.baltovski@gmail.com">Tony Baltovski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>snailbot_msgs</run_depend>
  <run_depend>rosserial_python</run_depend>
  <export>
  </export>
</package>
