<?xml version="1.0"?>
<package>
  <name>snailbot_msgs</name>
  <version>0.0.0</version>
  <description>The snailbot message package</description>
  <maintainer email="tony.baltovski@gmail.com">Tony Baltovski</maintainer>
  <license>BSD</license>
  <author email="tony.baltovski@gmail.com">Tony Baltovski</author>

  <buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
