<?xml version="1.0"?>
<package>
  <name>snailbot_teleop</name>
  <version>0.0.0</version>
  <description>The snailbot teleop package</description>
  <maintainer email="tony.baltovski@gmail.com">Tony Baltovski</maintainer>
  <license>BSD</license>
  <author email="tony.baltovski@gmail.com">Tony Baltovski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>joy</run_depend>
  <export>
  </export>
</package>
