<?xml version="1.0"?>
<package>
  <name>snailbot_teleop</name>
  <version>0.0.0</version>
  <description>The snailbot teleop package</description>
  <maintainer email="tony.baltovski@gmail.com">Tony Baltovski</maintainer>
  <license>BSD</license>
  <author email="tony.baltovski@gmail.com">Tony Baltovski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joy</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  
</package>
